crates/haneul-core/src/authority/snapshots/haneul_core__authority__execution_time_estimator__tests__execution_time_observer_v102.snap
---
source: crates/haneul-core/src/authority/execution_time_estimator.rs
expression: snapshot_data
---
protocol_version: 102
consensus_observations:
  - - MakeMoveVec
    - observations:
        - - 1
          - secs: 0
            nanos: 20000000
        - - 10
          - secs: 0
            nanos: 22000000
        - - 5
          - secs: 0
            nanos: 19000000
        - - 1
          - secs: 0
            nanos: 25000000
      stake_weighted_median:
        secs: 0
        nanos: 22000000
  - - MergeCoins
    - observations:
        - - 9
          - secs: 0
            nanos: 67000000
        - - 7
          - secs: 0
            nanos: 46000000
        - - 8
          - secs: 0
            nanos: 59000000
        - - 7
          - secs: 0
            nanos: 0
      stake_weighted_median:
        secs: 0
        nanos: 59000000
  - - SplitCoins
    - observations:
        - - 0
          - ~
        - - 5
          - secs: 0
            nanos: 21000000
        - - 5
          - secs: 0
            nanos: 54000000
        - - 9
          - secs: 0
            nanos: 0
      stake_weighted_median:
        secs: 0
        nanos: 21000000
  - - TransferObjects
    - observations:
        - - 3
          - secs: 0
            nanos: 88000000
        - - 0
          - ~
        - - 0
          - ~
        - - 7
          - secs: 0
            nanos: 51000000
      stake_weighted_median:
        secs: 0
        nanos: 88000000
  - - Upgrade
    - observations:
        - - 0
          - ~
        - - 0
          - ~
        - - 6
          - secs: 0
            nanos: 981000000
        - - 4
          - secs: 0
            nanos: 587000000
      stake_weighted_median:
        secs: 0
        nanos: 981000000
  - - MoveEntryPoint:
        package: "0x0000000000000000000000000000000000000000000000000000000000000001"
        module: coin
        function: transfer
        type_arguments: []
    - observations:
        - - 8
          - secs: 0
            nanos: 275000000
        - - 6
          - secs: 0
            nanos: 162000000
        - - 9
          - secs: 0
            nanos: 268000000
        - - 5
          - secs: 0
            nanos: 140000000
      stake_weighted_median:
        secs: 0
        nanos: 268000000
  - - MoveEntryPoint:
        package: "0x0000000000000000000000000000000000000000000000000000000000000002"
        module: nft
        function: mint
        type_arguments: []
    - observations:
        - - 4
          - secs: 0
            nanos: 202000000
        - - 0
          - ~
        - - 2
          - secs: 0
            nanos: 142000000
        - - 8
          - secs: 0
            nanos: 499000000
      stake_weighted_median:
        secs: 0
        nanos: 202000000
transaction_estimates:
  - - coin_transfer_call
    - secs: 0
      nanos: 268000000
  - - mixed_move_calls
    - secs: 0
      nanos: 470000000
  - - native_commands_with_observations
    - secs: 0
      nanos: 380000000
  - - transfer_objects_5_items
    - secs: 0
      nanos: 528000000
  - - split_coins_3_amounts
    - secs: 0
      nanos: 84000000
  - - merge_coins_2_sources
    - secs: 0
      nanos: 177000000
  - - make_move_vec_2_elements
    - secs: 0
      nanos: 66000000
  - - mixed_commands
    - secs: 0
      nanos: 307000000
  - - upgrade_package
    - secs: 0
      nanos: 981000000
