crates/haneul-core/src/authority/snapshots/haneul_core__authority__execution_time_estimator__tests__execution_time_observer_v108.snap
---
source: crates/haneul-core/src/authority/execution_time_estimator.rs
expression: snapshot_data
---
protocol_version: 108
consensus_observations:
  - - MakeMoveVec
    - observations:
        - - 8
          - secs: 0
            nanos: 27000000
        - - 6
          - secs: 0
            nanos: 24000000
        - - 7
          - secs: 0
            nanos: 0
        - - 1
          - secs: 0
            nanos: 25000000
      stake_weighted_median:
        secs: 0
        nanos: 25000000
  - - MergeCoins
    - observations:
        - - 6
          - secs: 0
            nanos: 63000000
        - - 10
          - secs: 0
            nanos: 60000000
        - - 2
          - secs: 0
            nanos: 32000000
        - - 7
          - secs: 0
            nanos: 0
      stake_weighted_median:
        secs: 0
        nanos: 60000000
  - - SplitCoins
    - observations:
        - - 9
          - secs: 0
            nanos: 79000000
        - - 0
          - ~
        - - 5
          - secs: 0
            nanos: 54000000
        - - 3
          - secs: 0
            nanos: 61000000
      stake_weighted_median:
        secs: 0
        nanos: 61000000
  - - TransferObjects
    - observations:
        - - 0
          - ~
        - - 0
          - ~
        - - 2
          - secs: 0
            nanos: 56000000
        - - 3
          - secs: 0
            nanos: 32000000
      stake_weighted_median:
        secs: 0
        nanos: 56000000
  - - Upgrade
    - observations:
        - - 4
          - secs: 0
            nanos: 833000000
        - - 9
          - secs: 0
            nanos: 972000000
        - - 6
          - secs: 0
            nanos: 981000000
        - - 4
          - secs: 0
            nanos: 587000000
      stake_weighted_median:
        secs: 0
        nanos: 972000000
  - - MoveEntryPoint:
        package: "0x0000000000000000000000000000000000000000000000000000000000000001"
        module: coin
        function: transfer
        type_arguments: []
    - observations:
        - - 9
          - secs: 0
            nanos: 481000000
        - - 6
          - secs: 0
            nanos: 162000000
        - - 9
          - secs: 0
            nanos: 268000000
        - - 0
          - ~
      stake_weighted_median:
        secs: 0
        nanos: 268000000
  - - MoveEntryPoint:
        package: "0x0000000000000000000000000000000000000000000000000000000000000002"
        module: nft
        function: mint
        type_arguments: []
    - observations:
        - - 0
          - ~
        - - 3
          - secs: 0
            nanos: 208000000
        - - 2
          - secs: 0
            nanos: 142000000
        - - 8
          - secs: 0
            nanos: 499000000
      stake_weighted_median:
        secs: 0
        nanos: 208000000
transaction_estimates:
  - - coin_transfer_call
    - secs: 0
      nanos: 268000000
  - - mixed_move_calls
    - secs: 0
      nanos: 476000000
  - - native_commands_with_observations
    - secs: 0
      nanos: 404000000
  - - transfer_objects_1_items
    - secs: 0
      nanos: 112000000
  - - split_coins_4_amounts
    - secs: 0
      nanos: 305000000
  - - merge_coins_2_sources
    - secs: 0
      nanos: 180000000
  - - make_move_vec_6_elements
    - secs: 0
      nanos: 175000000
  - - mixed_commands
    - secs: 0
      nanos: 291000000
  - - upgrade_package
    - secs: 0
      nanos: 972000000
